--- a/views/css/style.css
+++ b/views/css/style.css
@@ -31,6 +31,7 @@ form {
 
 .mover {
   backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
   position: fixed;
   width: 256px;
   z-index: -1;
